# watchadoin

./: pyproject.toml
data/: example.taskpaper
src/watchadoin/: app.py  codeeditor.py  highlighter.py  lexer.py  nodes.py  parser.py  visitor.py
src/watchadoin/visitors/: filewriter.py  id.py  printer.py
tests/: test_lexer.py  test_watchadoin.py
tests/lexer/: conftest.py  test_lexer.data
tests/parser/: conftest.py  test_parser.data
