[tool.poetry]
name = "watchadoing"
version = "0.1.0"
description = ""
authors = ["Olaf Conradi <olaf@conradi.org>"]
packages = [
    { include = "watchadoin", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
wheel = "^0.37.1"
PySide6 = "^6.2.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2"
black = "^21.12b0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119

[tool.pytest.ini_options]
addopts = "--cov-report=term --cov-report=xml --cov=watchadoin"